fix overflow body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 .full-height {
